src/test/ui/coherence/impl-foreign-for-fundamental[foreign].stderr
error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/impl-foreign-for-fundamental[foreign].rs:10:1
   |
LL | impl Remote for Box<i32> {
   | ^^^^^------^^^^^--------
   | |    |          |
   | |    |          `i32` is not defined in the current crate
   | |    `std::alloc::Global` is not defined in the current crate
   | impl doesn't use only types from inside the current crate
   |
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/impl-foreign-for-fundamental[foreign].rs:14:1
   |
LL | impl<T> Remote for Box<Rc<T>> {
   | ^^^^^^^^------^^^^^----------
   | |       |          |
   | |       |          `Rc` is not defined in the current crate
   | |       `std::alloc::Global` is not defined in the current crate
   | impl doesn't use only types from inside the current crate
   |
   = note: define and implement a trait or new type instead

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0117`.
